feat: Implement AI model integration with image analysis API